--- a/001-signup/style.css
+++ b/001-signup/style.css
@@ -35,7 +35,7 @@ a {
 .inner {
     width: 75vw;
     height: 75vh;
-    background-color: rgba(255,255,255, 0.6);
+    background-color: rgba(255,255,255, 0.7);
     z-index: 1000;
     display: flex;
 }
@@ -79,8 +79,6 @@ form {
     color: #555555;
 }
 
-
-
 button {
     background: #FAD961; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(left top, #FAD961, #F76B1C); /* For Safari 5.1 to 6.0 */
@@ -94,4 +92,21 @@ button {
     font-size: 17px;
     border: 0px solid transparent;
     border-radius: 4px;
+}
+
+@media (max-width:699px) {
+
+    .background-image {
+        width: 150vw;
+        height: 150vh;
+    }
+
+    .inner {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .img-area {
+        display: none;
+    }
 }
