--- a/008-404_page/style.css
+++ b/008-404_page/style.css
@@ -4,13 +4,13 @@ body {
 
 h1 {
     display: inline-block;
-    font-size: 21em;
+    font-size: 25vw;
     font-weight: 900;
     margin: 0;
 }
 
 h2 {
-    font-size: 2.5em;
+    font-size: 2em;
 }
 
 p {
@@ -42,6 +42,30 @@ a:hover {
     text-align: center;
 }
 
+.icon {
+    width: 18vw;
+    height: auto;
+}
+
 .btn {
     margin: 3em;
+}
+
+@media (max-width:599px) {
+    h2 {
+        font-size: 1.15em;
+    }
+    .container {
+        margin: 7em auto;
+    }
+
+    p {
+        font-size: .85em;
+    }
+}
+
+@media (max-width:768px) {
+    .container {
+        margin: 3.5em auto;
+    }
 }
